--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -12,50 +11,47 @@
         android:id="@+id/activity_phq9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
         android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
         tools:context=".ui.adhd.adhdActivity">
 
         <TextView
-            android:text="adhdOvr"
             android:id="@+id/general"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
-            android:layout_gravity="center"
+            android:text="adhdOvr"
             android:textAllCaps="false"
             android:textColor="#234E70"
-            android:textStyle="bold"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
             android:textSize="25sp"
-        />
+            android:textStyle="bold" />
 
         <TextView
-            android:text="adhdQ1"
             android:id="@+id/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:textSize="22sp"
             android:autoSizeTextType="uniform"
+            android:text="adhdQ1"
             android:textAllCaps="false"
-            android:textStyle="bold"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
-         />
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <Button
-            android:text="adhdA1"
             android:id="@+id/choiceA"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -63,18 +59,16 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
+            android:text="adhdA1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/questions"
-        />
-<!--        android:background="@drawable/rounded_button"-->
+            app:layout_constraintTop_toBottomOf="@+id/questions" />
 
         <Button
-            android:text="adhdA2"
             android:id="@+id/choiceB"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -82,18 +76,17 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
+            android:text="adhdA2"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/choiceA"
-        />
-<!--        android:background="@drawable/rounded_button"-->
+            app:layout_constraintTop_toBottomOf="@+id/choiceA" />
+        <!--        android:background="@drawable/rounded_button"-->
 
         <Button
-            android:text="adhdA3"
             android:id="@+id/choiceC"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -101,18 +94,17 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
+            android:text="adhdA3"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/choiceB"
-        />
-<!--        android:background="@drawable/rounded_button"-->
+            app:layout_constraintTop_toBottomOf="@+id/choiceB" />
+        <!--        android:background="@drawable/rounded_button"-->
 
         <Button
-            android:text="adhdA4"
             android:id="@+id/choiceE"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -120,18 +112,17 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
+            android:text="adhdA4"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/choiceC"
-        />
-<!--        android:background="@drawable/rounded_button"-->
+            app:layout_constraintTop_toBottomOf="@+id/choiceC" />
+        <!--        android:background="@drawable/rounded_button"-->
 
         <Button
-            android:text="adhdA5"
             android:id="@+id/choiceD"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -139,15 +130,15 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#A7BEAE"
+            android:text="adhdA5"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/choiceD"
-        />
-<!--        android:background="@drawable/rounded_button"-->
+            app:layout_constraintTop_toBottomOf="@+id/choiceD" />
+        <!--        android:background="@drawable/rounded_button"-->
 
     </LinearLayout>
 </ScrollView>
