--- a/app/src/main/res/layout/activity_breathing.xml
+++ b/app/src/main/res/layout/activity_breathing.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/Hex"
+    android:orientation="vertical"
     tools:context=".ui.relax.Breathe">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="252dp"
-        android:paddingTop="30dp"
         android:background="@color/Hex"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="30dp">
 
 
         <TextView
@@ -23,16 +23,16 @@
             android:layout_height="wrap_content"
             android:text="@string/breathing_exercise"
             android:textAlignment="center"
-            android:textStyle="bold"
             android:textColor="#234E70"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/image_logo"
-            android:layout_gravity="center"
             android:layout_width="119dp"
             android:layout_height="107dp"
             android:layout_below="@id/Email"
+            android:layout_gravity="center"
             android:contentDescription="TODO"
             android:src="@drawable/vozyk_2_1"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -60,10 +60,10 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
-                android:orientation="vertical"
+                android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/container"
+                android:orientation="vertical"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -76,15 +76,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:textColor="#234E70"
                     android:text="@string/i_want_to_inhale_for"
+                    android:textColor="#234E70"
                     android:textSize="24sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
                     <Spinner
                         android:id="@+id/inhale"
@@ -108,8 +108,8 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
-                        android:textColor="#234E70"
                         android:text="@string/seconds"
+                        android:textColor="#234E70"
                         android:textSize="20sp" />
 
                 </LinearLayout>
@@ -127,8 +127,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
                     <Spinner
                         android:id="@+id/hold"
@@ -152,8 +152,8 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
-                        android:textColor="#234E70"
                         android:text="@string/seconds"
+                        android:textColor="#234E70"
                         android:textSize="20sp" />
 
                 </LinearLayout>
@@ -171,8 +171,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
                     <Spinner
                         android:id="@+id/exhale"
@@ -196,8 +196,8 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
-                        android:textColor="#234E70"
                         android:text="@string/seconds"
+                        android:textColor="#234E70"
                         android:textSize="20sp" />
 
                 </LinearLayout>
@@ -215,8 +215,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
                     <Spinner
                         android:id="@+id/breaths"
@@ -240,8 +240,8 @@
                         android:layout_marginTop="13dp"
                         android:layout_marginEnd="24dp"
                         android:ems="10"
-                        android:textColor="#234E70"
                         android:text="@string/cycles"
+                        android:textColor="#234E70"
                         android:textSize="20sp" />
 
                 </LinearLayout>
