--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.ChangeEmail"
     android:background="@color/Hex"
-    >
+    tools:context=".ui.settings.ChangeEmail">
 
     <EditText
         android:id="@+id/current_email"
@@ -17,11 +16,11 @@
         android:layout_marginEnd="56dp"
         android:layout_marginBottom="488dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,11 +36,11 @@
         android:layout_marginEnd="57dp"
         android:layout_marginBottom="404dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="New Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,11 +56,11 @@
         android:layout_marginEnd="57dp"
         android:layout_marginBottom="337dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
