--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.ChangeLanguage"
     android:background="@color/Hex"
-    >
-    
+    tools:context=".ui.settings.ChangeLanguage">
+
     <TextView
         android:id="@+id/tv_change_language"
         android:layout_width="191dp"
         android:layout_height="43dp"
         android:layout_marginStart="104dp"
         android:text="@string/change_language"
-        android:textSize="22sp"
         android:textColor="#234E70"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +41,8 @@
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
             android:text="@string/english"
-            android:textSize="14sp"
             android:textColor="#234E70"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,8 +54,8 @@
             android:layout_height="66dp"
             android:layout_marginStart="16dp"
             android:text="@string/belorussian"
-            android:textSize="14sp"
             android:textColor="#234E70"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -68,8 +67,8 @@
             android:layout_height="66dp"
             android:layout_marginStart="16dp"
             android:text="@string/polish"
-            android:textSize="14sp"
             android:textColor="#234E70"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
