--- a/app/src/main/res/layout/activity_delete_acount.xml
+++ b/app/src/main/res/layout/activity_delete_acount.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Hex"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.settings.DeleteAccount"
-    android:background="@color/Hex"
-    >
+    tools:context=".ui.settings.DeleteAccount">
 
     <EditText
         android:id="@+id/email"
@@ -19,11 +18,11 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="472dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,11 +38,11 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="392dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,8 +57,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
         android:text="Submit Here"
-        android:textSize="13sp"
         android:textColor="#234E70"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
