--- a/app/src/main/res/layout/medicationlayout.xml
+++ b/app/src/main/res/layout/medicationlayout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/medicationLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/medicationLayout">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -16,18 +16,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:background="#E7E8D1"
-            >
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/medName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:background="#C8A2C8"
                 android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,12 +36,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:background="#C8A2C8"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/medName"
-                app:layout_constraintTop_toTopOf="@+id/medName"
-                android:background="#C8A2C8"
-                android:textColor="@color/black"/>
+                app:layout_constraintTop_toTopOf="@+id/medName" />
 
             <TextView
                 android:id="@+id/medTime"
