--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +11,8 @@
         android:id="@+id/imageView2"
         android:layout_width="408dp"
         android:layout_height="223dp"
-        android:layout_marginTop="530dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="530dp"
         android:clickable="false"
         android:src="@drawable/vozyk_3"
         tools:layout_editor_absoluteX="1dp"
