--- a/app/src/main/res/layout/activity_adhd_result.xml
+++ b/app/src/main/res/layout/activity_adhd_result.xml
@@ -5,23 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:orientation="vertical"
     android:background="@color/Hex"
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
     tools:context=".ui.adhd.adhdResultActivity">
 
     <ImageView
         android:id="@+id/Logo"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="10dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:src="@drawable/voz"
-        android:contentDescription="TODO" />
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/voz" />
 
     <TextView
         android:id="@+id/results"
@@ -38,12 +38,13 @@
         app:layout_constraintTop_toBottomOf="@id/Logo"
 
         />
+
     <Button
+        android:id="@+id/redo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center"
-        android:id="@+id/redo"
+        android:layout_marginTop="100dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="#C0B2E7"
         android:text="adhdRetry"
@@ -53,7 +54,6 @@
         android:textColorHint="#664564"
         android:textColorLink="#664564"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/results"
-        />
+        app:layout_constraintTop_toBottomOf="@id/results" />
 
 </LinearLayout>
