--- a/app/src/main/res/layout/activity_breathing_exercise.xml
+++ b/app/src/main/res/layout/activity_breathing_exercise.xml
@@ -4,17 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/Hex">
+    android:background="@color/Hex"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         android:layout_width="61dp"
         android:layout_height="55dp"
         android:layout_marginStart="5dp"
@@ -22,15 +16,22 @@
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="55dp"
         android:padding="5dp"
-        android:src="@drawable/back" />
+        android:src="@drawable/back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="252dp"
-        android:paddingTop="30dp"
         android:background="@color/Hex"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="30dp">
+
         <TextView
             android:id="@+id/breathNumber"
             android:layout_width="match_parent"
@@ -55,11 +56,11 @@
     <LinearLayout
         android:id="@+id/breath_layout2"
         android:layout_width="380dp"
-        android:background="@color/Hex"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="-100dp"
-        android:layout_marginBottom="40dp">
+        android:layout_marginBottom="40dp"
+        android:background="@color/Hex">
 
         <TextView
             android:id="@+id/timer"
