--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.ChangePassword"
-    android:background="@color/Hex">
+    android:background="@color/Hex"
+    tools:context=".ui.settings.ChangePassword">
 
 
     <EditText
@@ -17,11 +17,11 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="500dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +38,11 @@
         android:layout_marginEnd="83dp"
         android:layout_marginBottom="419dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Current password"
         android:inputType="textPassword"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,11 +58,11 @@
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="339dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="New Password"
         android:inputType="textPassword"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,11 +79,11 @@
         android:layout_marginEnd="84dp"
         android:layout_marginBottom="268dp"
         android:autofillHints=""
-        android:textColor="#234E70"
         android:ems="10"
         android:hint="Repeat Password"
         android:inputType="textPassword"
         android:padding="10dp"
+        android:textColor="#234E70"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
