--- a/app/src/main/res/layout/activity_doctor_add.xml
+++ b/app/src/main/res/layout/activity_doctor_add.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.doctor.DoctorAddActivity"
-    android:background="@color/Hex">
+    android:background="@color/Hex"
+    tools:context=".ui.doctor.DoctorAddActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="@color/OrangeAeroSpace"
+        android:backgroundTint="@color/Hex"
         android:fontFamily="@font/roboto_bold"
         android:paddingStart="10dp"
         android:paddingTop="60dp"
@@ -21,9 +22,7 @@
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/Hex"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/doctor_reason"
@@ -72,11 +71,11 @@
         android:layout_width="50dp"
         android:layout_height="59dp"
         android:layout_marginEnd="68dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/lab_date_view"
         app:layout_constraintEnd_toStartOf="@+id/lab_date_view"
         app:layout_constraintTop_toTopOf="@+id/lab_date_view"
-        app:srcCompat="@drawable/calendar"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/calendar" />
 
     <TextView
         android:id="@+id/lab_date_view"
@@ -84,11 +83,11 @@
         android:layout_height="46dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="92dp"
-        android:text="Select Date"
         android:onClick="showDatePickerDialog"
+        android:text="Select Date"
         android:textColor="#234E70"
-        android:textStyle="bold"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/doctor_reason" />
 
@@ -97,22 +96,22 @@
         android:layout_width="88dp"
         android:layout_height="57dp"
         android:layout_marginEnd="48dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/doctor_name"
         app:layout_constraintEnd_toStartOf="@+id/doctor_name"
         app:layout_constraintTop_toTopOf="@+id/doctor_name"
-        app:srcCompat="@drawable/doctor"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/doctor" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="86dp"
         android:layout_height="45dp"
         android:layout_marginEnd="48dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/doctor_reason"
         app:layout_constraintEnd_toStartOf="@+id/doctor_reason"
         app:layout_constraintTop_toTopOf="@+id/doctor_reason"
-        app:srcCompat="@drawable/notepad"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/notepad" />
 
     <Button
         android:id="@+id/doctor_add_btn"
@@ -120,9 +119,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
         android:text="ADD"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="#234E70"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
