--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -4,26 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.lab.labAddActivity"
-    android:background="@color/Hex">
+    android:background="@color/Hex"
+    tools:context=".ui.lab.labAddActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="@color/YellowAeroSpace"
-        android:textStyle="bold"
+        android:backgroundTint="@color/Hex"
         android:paddingStart="10dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
         android:text="@string/add_lab_test"
         android:textColor="#234E70"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/Hex"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/lab_doctor"
@@ -58,10 +57,10 @@
 
         <AutoCompleteTextView
             android:id="@+id/lab_name_edit"
-            android:padding="5dp"
-            android:layout_margin="2dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,11 +72,11 @@
         android:layout_width="50dp"
         android:layout_height="59dp"
         android:layout_marginEnd="68dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/lab_date_view"
         app:layout_constraintEnd_toStartOf="@+id/lab_date_view"
         app:layout_constraintTop_toTopOf="@+id/lab_date_view"
-        app:srcCompat="@drawable/calendar"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/calendar" />
 
     <TextView
         android:id="@+id/lab_date_view"
@@ -85,11 +84,11 @@
         android:layout_height="46dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="92dp"
-        android:text="Select Date"
         android:onClick="showDatePickerDialog"
+        android:text="Select Date"
         android:textColor="#234E70"
-        android:textStyle="bold"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lab_doctor" />
 
@@ -98,22 +97,22 @@
         android:layout_width="88dp"
         android:layout_height="57dp"
         android:layout_marginEnd="48dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/lab_name"
         app:layout_constraintEnd_toStartOf="@+id/lab_name"
         app:layout_constraintTop_toTopOf="@+id/lab_name"
-        app:srcCompat="@drawable/labs"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/labs" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="86dp"
         android:layout_height="39dp"
         android:layout_marginEnd="48dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/lab_doctor"
         app:layout_constraintEnd_toStartOf="@+id/lab_doctor"
         app:layout_constraintTop_toTopOf="@+id/lab_doctor"
-        app:srcCompat="@drawable/doctor"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/doctor" />
 
     <Button
         android:id="@+id/lab_add_btn"
