--- a/app/src/main/res/layout/activity_meditate.xml
+++ b/app/src/main/res/layout/activity_meditate.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:hint="@string/_5_30_minutes"
+        android:importantForAutofill="no"
         android:inputType="number"
         android:maxLength="4"
         android:textColor="@color/black"
@@ -22,8 +23,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255"
-        android:importantForAutofill="no" />
+        app:layout_constraintVertical_bias="0.255" />
 
     <Button
         android:id="@+id/button_set"
@@ -48,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
         android:layout_marginTop="30dp"
-        android:textColor="@color/Bluebell"
         android:text="00:00"
+        android:textColor="@color/Bluebell"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
