--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -113,13 +113,13 @@
         android:layout_below="@id/Email"
         android:layout_marginStart="322dp"
         android:layout_marginEnd="7dp"
-        android:background="@drawable/hide_show"
         android:layout_marginBottom="348dp"
+        android:background="@drawable/hide_show"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="TODO" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/etConfirmPassword"
@@ -144,8 +144,8 @@
         android:layout_marginBottom="180dp"
         android:backgroundTint="@color/Bluebell"
         android:enabled="true"
-        android:textColor="#234E70"
         android:text="@string/register"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -157,12 +157,12 @@
         android:layout_below="@id/Email"
         android:layout_marginBottom="276dp"
         android:background="@drawable/hide_show"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.858"
         app:layout_constraintLeft_toRightOf="@+id/etConfirmPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="TODO" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/createText"
