--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -2,8 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Hex"
-    >
+    android:background="@color/Hex">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/up_name"
@@ -54,16 +53,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/before_food"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
         <RadioButton
             android:id="@+id/up_radio_button_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/after_food"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
     </RadioGroup>
 
@@ -83,8 +80,7 @@
             android:layout_height="wrap_content"
             android:width="150dp"
             android:text="@string/morning"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
         <Button
             android:id="@+id/up_lunch"
@@ -93,8 +89,7 @@
             android:layout_height="wrap_content"
             android:width="150dp"
             android:text="@string/afternoon"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -111,12 +106,11 @@
         <Button
             android:id="@+id/up_night"
             style="?attr/materialButtonOutlinedStyle"
-            android:width="150dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:width="150dp"
             android:text="@string/night"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
 
         <Button
@@ -126,8 +120,7 @@
             android:layout_height="wrap_content"
             android:width="150dp"
             android:text="@string/custom"
-            android:textColor="#234E70"
-            />
+            android:textColor="#234E70" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -138,8 +131,8 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="48dp"
         android:text="@string/update"
-        app:layout_constraintStart_toStartOf="parent"
         android:textColor="#234E70"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_toggleButton" />
 
     <Button
@@ -147,8 +140,8 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginEnd="80dp"
-        android:text="@string/cancel"
         android:backgroundTint="@color/Raspberry"
+        android:text="@string/cancel"
         android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="@+id/up_updatebtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -163,8 +156,8 @@
         android:paddingBottom="10dp"
         android:text="@string/update_medicine"
         android:textColor="#234E70"
-        android:textStyle="bold"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
