--- a/app/src/main/res/layout/add_new_task_dialog.xml
+++ b/app/src/main/res/layout/add_new_task_dialog.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     android:background="@color/Hex"
-    >
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,31 +23,29 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:hint="@string/task_name"
-        android:textColor="#234E70"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:importantForAutofill="no" />
+        android:textColor="#234E70" />
 
     <TextView
         android:id="@+id/start_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
         android:layout_margin="5dp"
         android:layout_marginStart="5dp"
-        android:textColor="#234E70"
         android:hint="@string/starting_date"
-        />
+        android:textColor="#234E70"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/end_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
         android:layout_margin="5dp"
         android:layout_marginStart="5dp"
-        android:textColor="#234E70"
         android:hint="@string/estimated_finishing_date"
-        />
-    
+        android:textColor="#234E70"
+        android:textSize="18sp" />
+
 
 </LinearLayout>
