--- a/app/src/main/res/layout/fragment_meds.xml
+++ b/app/src/main/res/layout/fragment_meds.xml
@@ -17,10 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="130dp"
+            android:background="@color/Hex"
             android:paddingTop="10dp"
-            android:paddingBottom="40dp"
-            android:background="@color/white">
-        </ListView>
+            android:paddingBottom="40dp"></ListView>
 
         <ImageView
             android:id="@+id/empty"
@@ -28,23 +27,25 @@
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="false"
-            android:foregroundGravity="center"
             android:layout_marginTop="300dp"
             android:clickable="false"
-            app:srcCompat="@drawable/pills"
-            android:contentDescription="TODO" />
+            android:contentDescription="TODO"
+            android:foregroundGravity="center"
+            app:srcCompat="@drawable/pills" />
+
         <TextView
             android:id="@+id/emptyText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="false"
-            android:textAlignment="center"
             android:layout_marginTop="600dp"
-            android:text="@string/no_medicines"
             android:fontFamily="@font/roboto_bold"
+            android:text="@string/no_medicines"
+            android:textAlignment="center"
             android:textColor="#234E70"
             android:textSize="30sp" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -60,6 +61,7 @@
             app:layout_constraintBottom_toTopOf="@+id/listview"
             app:layout_constraintStart_toStartOf="@+id/listview" />
     </RelativeLayout>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -80,20 +82,19 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_gravity="bottom"
+            android:backgroundTint="@color/Hex"
             app:fabAlignmentMode="end"
             app:hideOnScroll="true"
-            app:menu="@menu/nav_menu"
-            android:backgroundTint="@color/Hex"
-            />
+            app:menu="@menu/nav_menu" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/RobbinsEggBlue"
-            app:srcCompat="@drawable/ic_baseline_add_24"
+            android:contentDescription="TODO"
             app:layout_anchor="@id/bottomAppBar"
-            android:contentDescription="TODO" />
+            app:srcCompat="@drawable/ic_baseline_add_24" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
