--- a/app/src/main/res/layout/info_task_dialog.xml
+++ b/app/src/main/res/layout/info_task_dialog.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
-    android:background="#E7E8D1">
+    android:background="#E7E8D1"
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/task"
-            android:textSize="20sp"
             android:textColor="#234E70"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -35,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textColor="#234E70"
             android:text="@string/info"
+            android:textColor="#234E70"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -50,8 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/starting_date"
-            android:textSize="20sp"
             android:textColor="#234E70"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -59,8 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textColor="#234E70"
             android:text="@string/info"
+            android:textColor="#234E70"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -74,8 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/finishing_date"
-            android:textSize="20sp"
             android:textColor="#234E70"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -83,8 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textColor="#234E70"
             android:text="@string/info"
+            android:textColor="#234E70"
             android:textSize="20sp" />
     </LinearLayout>
 
