--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/Hex"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical"
-    android:background="@color/Hex"
-    >
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_constraint"
@@ -15,15 +14,14 @@
         android:layout_height="wrap_content"
         android:background="@color/Hex"
         android:foreground="?attr/selectableItemBackground"
-        android:minHeight="60dp"
-        >
+        android:minHeight="60dp">
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingEnd="2dp"
             android:paddingStart="16dp"
+            android:paddingEnd="2dp"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/tv_date"
@@ -35,10 +33,10 @@
             android:id="@+id/tv_date"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingBottom="2dp"
-            android:paddingEnd="16dp"
             android:paddingStart="2dp"
             android:paddingTop="2dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="2dp"
             android:textAlignment="viewEnd"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/tv_time"
@@ -51,8 +49,8 @@
             android:id="@+id/tv_time"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:paddingEnd="16dp"
             android:paddingStart="2dp"
+            android:paddingEnd="16dp"
             android:textAlignment="viewEnd"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
