--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/spinner_row"
-    android:minWidth="246dp"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:background="@color/Hex"
     android:gravity="center"
-    android:textSize="14sp"
+    android:minWidth="246dp"
+    android:text="Name"
     android:textColor="#234E70"
     android:textIsSelectable="false"
-    android:text="Name"
-    android:background="@color/Hex"
-    />
+    android:textSize="14sp" />
